--- a/app/design/frontend/Innovatis/acnof/Magento_Theme/templates/baskets.phtml
+++ b/app/design/frontend/Innovatis/acnof/Magento_Theme/templates/baskets.phtml
@@ -1,17 +1,26 @@
 <div class="baskets text-center">
-    <h2>Conheça nossas Cestas</h2>
-    <p>Monte sua cesta com produtos orgânicos, frescos e entregue na sua casa.</p>
+    <h2>Monte sua cesta personalizada</h2>
+    <p>Produtos orgânicos, frescos e entregue na sua casa.</p>
     <p>Com três opções de tamanho Grande (12 produtos), Média (8 produtos) e pequena (5 produtos), escolha a sua:</p>
 
     <div class="row baskets-img">
         <div class="col-md-4">
-            <img src="<?php echo $block->getViewFileUrl('images/basket_small.jpg'); ?>" title="Cesta Pequena" alt="Cesta Pequena">
+            <a href="/cesta-personalizada-pequena.html">
+                <img src="<?php echo $block->getViewFileUrl('images/basket_small.jpg'); ?>" title="Cesta Pequena" alt="Cesta Pequena">
+            </a>
         </div>
         <div class="col-md-4">
-            <img src="<?php echo $block->getViewFileUrl('images/basket_medium.jpg'); ?>" title="Cesta Média" alt="Cesta Média">
+            <a href="/cesta-personalizada-media.html">
+                <img src="<?php echo $block->getViewFileUrl('images/basket_medium.jpg'); ?>" title="Cesta Média" alt="Cesta Média">
+            </a>
         </div>
         <div class="col-md-4">
-            <img src="<?php echo $block->getViewFileUrl('images/basket_big.jpg'); ?>" title="Cesta Grande" alt="Cesta Grande">
+            <a href="/cesta-personalizada-grande.html">
+                <img src="<?php echo $block->getViewFileUrl('images/basket_big.jpg'); ?>" title="Cesta Grande" alt="Cesta Grande">
+            </a>
         </div>
     </div>
+
+    <h2>Ou aproveite nossas cestas pre-montadas</h2>
+    <p><a href="/cestas/pre-montadas.html">Clique aqui</a> e confira, você vai adorar !</p>
 </div>
