--- a/app/design/frontend/Innovatis/acnof/web/css/local-l.css
+++ b/app/design/frontend/Innovatis/acnof/web/css/local-l.css
@@ -169,7 +169,13 @@ footer .copy address {
     padding-bottom: 60px;
 }
 
-
+.opc-wrapper .form-shipping-address .fieldset .field .label {
+    font-weight: 400;
+    clip: inherit;
+    width: inherit;
+    height: inherit;
+    position: inherit;
+}
 
 @media only screen and (max-width: 768px)  {
     .baskets h2,
