--- a/app/design/frontend/Innovatis/acnof/web/css/local-l.css
+++ b/app/design/frontend/Innovatis/acnof/web/css/local-l.css
@@ -181,3 +181,10 @@ footer .copy address {
         font-size: 18px;
     }
 }
+
+.whatsapp{
+    position: fixed;
+    bottom: 120px;
+    right: 10px;
+}
+
