--- a/app/code/Innovatis/WhatsappFooter/view/frontend/templates/whatsapp.phtml
+++ b/app/code/Innovatis/WhatsappFooter/view/frontend/templates/whatsapp.phtml
@@ -1,6 +1,6 @@
 <div class="whatsapp">
     <p><a title="Atendimento" href="https://api.whatsapp.com/send?phone=5553999566761&amp;text=Oieee!!%20Nosso%20atendimento%20via%20WhatsApp%20%C3%A9%20de%20segunda%20%C3%A0%20sexta%2C%20das%208h%20as%2017h.%20Como%20podemos%20lhe%20ajudar%3F" target="_blank" rel="noopener">
-            <img src="<?php echo $this->getViewFileUrl('Innovatis_WhatsappFooter::images/img_whats.png'); ?>"
+            <img src="<?php echo $this->getViewFileUrl('Innovatis_WhatsappFooter::images/img_redonda_whats.jpeg'); ?>"
                  align= right position= fixed style="bottom:100px  right:100px"
             alt="" width="120" height="145"/>
         </a></p>
