--- a/app/code/Innovatis/WhatsappFooter/view/frontend/layout/default.xml
+++ b/app/code/Innovatis/WhatsappFooter/view/frontend/layout/default.xml
@@ -1,7 +1,11 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="footer-container">
-            <block name="innovatis_whatsapp" template="Innovatis_WhatsappFooter::whatsapp.phtml" />
+            <block name="innovatis_whatsapp" template="Innovatis_WhatsappFooter::whatsapp.phtml" >
+                <arguments>
+                    <argument name="view_model" xsi:type="object">Innovatis\WhatsappFooter\ViewModel\PhoneInfo</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
